--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,27 @@
 </head>
 <body id="body">
     <canvas width="400" height="800"></canvas>
-    <div class="control-pannel">
-        <div class="speed-pannel"></div>
+    <div class="next-figures-contianer" id="next-figures-contianer">
     </div>
+    <div class="control-pannel">
+        <p>Выбито линий: <span id="lines-counter">0</span></p>
+        <p>Счет: <span id="score-counter">0</span></p>
+        <p>Время <span id="time-counter">00:00:00</span></p>
+        <div class="speed-pannel">
+            <label for="interval">Скорость</label>
+            <input type="number" name="speed" min="1" max="4" value="1">
+        </div>
+        <p class="start-button" id="start-button">СТАРТ</p>
+    </div>
+
+    <template id="template">
+        <img src="./png/invL.png" alt="invL" id="invL-icon-template">
+        <img src="./png/invZ.png" alt="invZ" id="invZ-icon-template">
+        <img src="./png/L.png" alt="L" id="L-icon-template">
+        <img src="./png/line.png" alt="line" id="line-icon-template">
+        <img src="./png/rect.png" alt="rect" id="rect-icon-template">
+        <img src="./png/T.png" alt="T" id="T-icon-template">
+        <img src="./png/Z.png" alt="Z" id="Z-icon-template">
+    </template>
 </body>
 </html>
