--- a/src/index.html
+++ b/src/index.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <script type="module" src="js/index.js"></script>
-    <title>Document</title>
-</head>
-<body id="body">
-    <canvas width="400" height="800"></canvas>
-    <div class="next-figures-contianer" id="next-figures-contianer">
-    </div>
-    <div class="control-pannel">
-        <p>Выбито линий: <span id="lines-counter">0</span></p>
-        <p>Счет: <span id="score-counter">0</span></p>
-        <p>Время <span id="time-counter">00:00:00</span></p>
-        <div class="speed-pannel">
-            <label for="interval">Скорость</label>
-            <input type="number" name="speed" min="1" max="4" value="1">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="index.css" />
+        <script type="module" src="js/index.js"></script>
+        <title>Document</title>
+    </head>
+    <body id="body">
+        <canvas width="400" height="800"></canvas>
+        <div class="next-figures-contianer" id="next-figures-contianer"></div>
+        <div class="control-pannel">
+            <p>Выбито линий: <span id="lines-counter">0</span></p>
+            <p>Счет: <span id="score-counter">0</span></p>
+            <p>Время <span id="time-counter">00:00:00</span></p>
+            <div class="speed-pannel">
+                <label for="interval">Скорость</label>
+                <input type="number" id="speed-input" name="speed" min="1" max="4" value="1" />
+            </div>
+            <p class="start-button" id="start-button">СТАРТ</p>
         </div>
-        <p class="start-button" id="start-button">СТАРТ</p>
-    </div>
 
-    <template id="template">
-        <img src="./png/invL.png" alt="invL" id="invL-icon-template">
-        <img src="./png/invZ.png" alt="invZ" id="invZ-icon-template">
-        <img src="./png/L.png" alt="L" id="L-icon-template">
-        <img src="./png/line.png" alt="line" id="line-icon-template">
-        <img src="./png/rect.png" alt="rect" id="rect-icon-template">
-        <img src="./png/T.png" alt="T" id="T-icon-template">
-        <img src="./png/Z.png" alt="Z" id="Z-icon-template">
-    </template>
-</body>
+        <template id="template">
+            <img src="./png/invL.png" alt="invL" id="invL-icon-template" />
+            <img src="./png/invZ.png" alt="invZ" id="invZ-icon-template" />
+            <img src="./png/L.png" alt="L" id="L-icon-template" />
+            <img src="./png/line.png" alt="line" id="line-icon-template" />
+            <img src="./png/rect.png" alt="rect" id="rect-icon-template" />
+            <img src="./png/T.png" alt="T" id="T-icon-template" />
+            <img src="./png/Z.png" alt="Z" id="Z-icon-template" />
+        </template>
+    </body>
 </html>
